--- a/conf/annam.yml
+++ b/conf/annam.yml
@@ -1,3 +1,5 @@
 ---
+#        - host: 'heaerieglobalsolutions.com'
         - host: '192.168.1.42'
+#        - host: '192.168.1.152'
           port: '443'
