--- a/conf/annam.yml
+++ b/conf/annam.yml
@@ -1,5 +1,6 @@
 ---
 #        - host: 'heaerieglobalsolutions.com'
-        - host: '192.168.1.42'
+        - host: '192.168.1.207'
 #        - host: '192.168.1.152'
-          port: '443'
+          port: '8081'
+          protocal: 'http'
